--- a/uv/themes/uv-en-GB-theme/css/uv-mediaelement-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-mediaelement-extension/theme.css
@@ -22,6 +22,14 @@
   margin-left: 10px;
   width: 380px;
 }
+#app .overlay.embed .middle .firstRow .rightCol .url {
+  width: 100%;
+  font-size: 11px;
+  border: 1px solid #bbbbbb;
+}
+#app .overlay.embed .middle .firstRow .rightCol p {
+  padding: 5px 0px 5px 0px;
+}
 #app .overlay.embed .middle .secondRow textarea.code {
   width: 100%;
   height: 90px;
@@ -236,6 +244,13 @@
   border-bottom: none !important;
   font-size: 12px !important;
 }
+#app .overlay.login .message .warning {
+  display: block;
+  background-color: #FFB81D;
+  font-weight: bold;
+  padding: 10px 10px 10px 10px;
+  margin-bottom: 10px;
+}
 #app .overlay.login .bottom {
   background: none;
 }
@@ -298,6 +313,10 @@
 }
 #app .leftPanel .tabsContent .options .right {
   float: right;
+  overflow: hidden;
+}
+#app .leftPanel .tabsContent .options .right .multiSelect .multiSelectAll {
+  float: left;
 }
 #app .leftPanel .tabsContent .options .right .multiSelect .btn {
   margin-left: 10px;
@@ -507,8 +526,14 @@
 }
 #app .leftPanel .views .galleryView .main .thumbs .thumb .wrap img {
   display: block;
+  float: left;
   max-width: 100%;
   max-height: 100%;
+}
+#app .leftPanel .views .galleryView .main .thumbs .thumb .wrap input {
+  float: left;
+  cursor: pointer;
+  margin-top: -20px;
 }
 #app .leftPanel .views .galleryView .main .thumbs .thumb.selected .wrap {
   border: 2px solid #fff;
@@ -529,6 +554,14 @@
 }
 #app .leftPanel .views .galleryView .main .thumbs .thumb.placeholder .wrap {
   background: url('../../img/uv-contentleftpanel-module/unavailable.png') no-repeat 50% 50%;
+}
+#app .leftPanel .views .galleryView .main .thumbs.multiSelect .thumb .wrap.multiSelected {
+  border: 2px solid #cc0000;
+  background: #cc0000;
+}
+#app .leftPanel .views .galleryView .main .thumbs.multiSelect .thumb .wrap.multiSelected .thumbImage {
+  opacity: 0.35;
+  filter: alpha(opacity=35);
 }
 #app .leftPanel .views .galleryView .main .thumbs.left-to-right .thumb {
   float: left;
@@ -563,6 +596,13 @@
 }
 #app .rightPanel .main .items {
   padding: 0 10px 20px 10px;
+}
+#app .rightPanel .main .items .header {
+  color: #869f33;
+  border-bottom: 1px solid #869f33;
+  font-size: 11px;
+  margin: 15px 10px 0 0;
+  text-transform: uppercase;
 }
 #app .rightPanel .main .items .item {
   padding: 0;
@@ -2589,6 +2629,26 @@ input[type=range]:focus::-ms-fill-upper {
   color: #fff;
   text-decoration: none;
 }
+#app .footerPanel .options a.feedback {
+  background-image: url('../../img/uv-shared-module/feedback.png');
+  background-repeat: no-repeat;
+  height: 21px;
+  line-height: 21px;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  background-position: left center;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 22px;
+}
+#app .footerPanel .options a.feedback:link,
+#app .footerPanel .options a.feedback:visited,
+#app .footerPanel .options a.feedback:hover,
+#app .footerPanel .options a.feedback:active {
+  color: #fff;
+  text-decoration: none;
+}
 #app .footerPanel .options a.fullScreen {
   background-image: url('../../img/uv-shared-module/fullscreen.png');
   background-repeat: no-repeat;
@@ -2661,6 +2721,17 @@ input[type=range]:focus::-ms-fill-upper {
   padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.bookmark {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  width: 27px;
+  padding: 0;
+}
+#app .footerPanel .options.minimiseButtons a.feedback {
   font: 0/0 a;
   text-shadow: none;
   background-color: transparent;
