--- a/uv/themes/uv-cy-GB-theme/css/uv-seadragon-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-seadragon-extension/theme.css
@@ -650,6 +650,8 @@
   width: 75px;
   margin: 0;
   cursor: pointer;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
  #app .leftPanel .tabs .tab.first {
   margin: 0 0 0 10px;
@@ -915,6 +917,9 @@
   margin: -24 0 0 -9;
 }
 #app .footerPanel .searchResults .searchResultPlacemarker.hover {
+  background: url('../../img/uv-searchfooterpanel-module/placemarker_down_hover.png');
+}
+#app .footerPanel .searchResults .searchResultPlacemarker.current {
   background: url('../../img/uv-searchfooterpanel-module/placemarker_down_hover.png');
 }
 #app .footerPanel .searchResults .positionPlacemarker {
